# modern_cpp_course_UniBonn

./: README.md
homework_1/task_2/: CMakeLists.txt  build.sh  install.sh
homework_1/task_2/src/: CMakeLists.txt
homework_5/: CMakeLists.txt
homework_5/include/: convert_dataset.hpp  serialize.hpp
homework_5/src/: convert_dataset.cpp
homework_5/tests/: CMakeLists.txt  homework_5.h  sifts_internal.cpp  test_convert_dataset.cpp  test_main.cpp  test_serialize.cpp
homework_6/: CMakeLists.txt
homework_6/include/: image.h
homework_6/io_tools/: io_tools.cpp
homework_6/src/: image.cpp
homework_6/tests/: CMakeLists.txt  test_from_file.cpp  test_histogram.cpp  test_resize.cpp
homework_7/: CMakeLists.txt
homework_7/include/: bow_dictionary.h  kmeans.h
homework_7/src/: bow_dictionary.cpp  convert_dataset.cpp  kmeans.cpp  serialize.cpp
homework_7/tests/: CMakeLists.txt  homework_7.h  test_bow_dictionary.cpp  test_data.hpp  test_kmeans.cpp  test_toan.cpp
homework_8/task_2/: CMakeLists.txt
homework_8/task_2/include/: homework_8.h  image_class.h  io_stragety.h  png_io_stragety.h  ppm_io_stragety.h  utils.h
homework_8/task_2/src/: image_class.cpp  png_io_stragety.cpp  ppm_io_stragety.cpp
homework_9/: CMakeLists.txt
homework_9/include/: bow_dictionary.h  histogram.h  homework_9.h  kmeans.h
homework_9/src/: bow_dictionary.cpp  histogram.cpp  kmeans.cpp
